--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
+@font-face {
+    font-family: "ObjectSans";
+    src: local("ObjectSans"),
+        url(./fonts/ObjectSans-Regular.otf) format("opentype");
+}
+
+@font-face {
+    font-family: "ObjectSansHeavy";
+    src: local("ObjectSansHeavy"),
+        url(./fonts/ObjectSans-Heavy.otf) format("opentype");
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    box-sizing: border-box;
+    background-color: #000000;
+    font-family: "Source Sans Pro", sans-serif;
+    min-height: 100vh;
 }
