Added images, SVG favicon and major design changes

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,10 @@
 .navbar {
     background-color: initial !important;
 }
+
+.navbar-brand a {
+    color: #fff;
+}
+.navbar-brand a:hover {
+    color: rgba(255, 255, 255, 0.75);
+}
